REGRESSION(263586@main): [GStreamer] webrtc/video-autoplay.html now times out https://bugs.webkit.org/show_bug.cgi?id=256585

Reviewed by Xabier Rodriguez-Calvar.

Switch back to webrtcbin balanced bundle policy. With max-bundle enforced the same transceiver is
set on receiving pads, whatever the media type, which most likely is a GStreamer bug.

* LayoutTests/platform/glib/fast/mediastream/RTCPeerConnection-inspect-answer-expected.txt:
* LayoutTests/platform/glib/fast/mediastream/RTCPeerConnection-inspect-offer-expected.txt:
* Source/WebCore/Modules/mediastream/gstreamer/GStreamerWebRTCUtils.h:
(WebCore::bundlePolicyFromConfiguration):

Canonical link: https://commits.webkit.org/263971@main